@@ -1,6 +1,9 @@
 devel
 -----
 
+* Add support for building with Zen 3 CPU when optimizing for the local
+  architecture.
+  
 * The web UI's node overview now displays also agent information (cluster only).
 
 * The statistics view in the web UI does now provide more system specific
